--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,12 @@
       </dependency>
 
       <dependency>
+          <groupId>org.hibernate</groupId>
+          <artifactId>hibernate-core</artifactId>
+          <version>4.3.11.Final</version>
+      </dependency>
+
+      <dependency>
           <groupId>mysql</groupId>
           <artifactId>mysql-connector-java</artifactId>
           <version>5.1.34</version>
