--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
   <properties>
     <spring.version>4.2.6.RELEASE</spring.version>
     <spring-data.version>1.2.0.RELEASE</spring-data.version>
+      <hibernate.version>4.3.10.Final</hibernate.version>
   </properties>
 
   <dependencies>
@@ -79,13 +80,13 @@
       <dependency>
           <groupId>org.hibernate</groupId>
           <artifactId>hibernate-entitymanager</artifactId>
-          <version>4.3.10.Final</version>
+          <version>${hibernate.version}</version>
       </dependency>
 
       <dependency>
           <groupId>org.hibernate</groupId>
           <artifactId>hibernate-core</artifactId>
-          <version>4.3.10.Final</version>
+          <version>${hibernate.version}</version>
       </dependency>
 
       <dependency>
